--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-	"name": "sharkey",
-	"version": "2023.10.1",
-	"codename": "shonk",
+	"name": "renekey",
+	"version": "0.0.1",
+	"codename": "Re",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/transfem-org/sharkey.git"
+		"url": ""
 	},
 	"packageManager": "pnpm@8.8.0",
 	"workspaces": [
