Feature Supports Google Translate for translation platform

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "Renekey",
-	"version": "0.0.1-dev1",
+	"version": "0.0.1-dev2",
 	"codename": "Re",
 	"repository": {
 		"type": "git",
@@ -43,6 +43,7 @@
 		"lodash": "4.17.21"
 	},
 	"dependencies": {
+		"@vitalets/google-translate-api": "8.0.0",
 		"execa": "8.0.1",
 		"cssnano": "6.0.1",
 		"js-yaml": "4.1.0",
